k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-2
  namespace: dev
  labels:
    app: nodejs-2
spec:
  type: ClusterIP
  selector:
    app: nodejs-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
